# git-rs

./: Cargo.toml
src/: hash.rs  main.rs  object.rs
tests/: cat-file-input  common.rs  init.rs  tests.rs
