[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
derive_more = "0.99.17"
flate2 = "1.0.28"
itertools = "0.12.1"
nom = "7.1.3"
sha1 = "0.10.6"
thiserror = "1.0.58"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempdir = "0.3.7"
